--- a/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.html
@@ -8,15 +8,15 @@
                             <span *ngIf="server.isRunning" class="column-run-status-running glyphicon glyphicon-play"></span>
                             <span *ngIf="!server.isRunning" class="column-run-status-stopped glyphicon glyphicon-stop"></span>
                         </div>
-                        <a class="column-name" href="{{ server._links.self.href }}">{{ server.name }}</a>
+                        <a class="column-name" [routerLink]="['/servers/' + server.id]">{{ server.name }}</a>
                         <div class="column-author">
                             <span>{{ server._embedded.author.name }}</span>
                         </div>
                     </div>
                 
                     <p class="description" item>{{ server.description }}</p>
-                    <a class="simulation referenced-item" item *ngFor="let simulation of server._embedded.simulations" href="{{ simulation._links.self.href }}">{{ simulation.name }}</a>
-                    <a class="presentation referenced-item" item *ngFor="let presentation of server._embedded.presentations" href="{{ presentation._links.self.href }}">{{ presentation.name }}</a>
+                    <a class="simulation referenced-item" item *ngFor="let simulation of server._embedded.simulations" [routerLink]="['/simulations/' + simulation.id]">{{ simulation.name }}</a>
+                    <a class="presentation referenced-item" item *ngFor="let presentation of server._embedded.presentations" [routerLink]="['/presentations/' + presentation.id]">{{ presentation.name }}</a>
                 </expandable-list-item>
             </expandable-list>
         </div>
