--- a/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.html
@@ -5,14 +5,14 @@
 
     <p>
         <span>By </span>
-        <a routerLink="{{ simulation._embedded.author._links.self.href }}">{{ simulation._embedded.author.name }}.</a>
+        <a [routerLink]="['/users/' + simulation._embedded.author.id]">{{ simulation._embedded.author.name }}.</a>
         <span>{{ simulation._embedded.author.description }} </span>
     </p>
     
     <p class="group-header" *ngIf="simulation._embedded.references">Referenced By</p>
     <div class="items-container" *ngIf="simulation._embedded.references">
         <ng-container *ngFor="let reference of simulation._embedded.references">
-            <a class="item-name" href="{{ reference._links.self.href }}">{{reference.name }}</a>
+            <a class="item-name" [routerLink]="['/simulations/' + reference.id]">{{reference.name }}</a>
             <div class="item-author">
                 <span>{{ reference._embedded.author.name }}</span>
             </div>
@@ -22,7 +22,7 @@
     <p class="group-header" *ngIf="simulation._embedded.consumers">Consumed by</p>
     <div class="items-container" *ngIf="simulation._embedded.consumers">
         <ng-container *ngFor="let consumer of simulation._embedded.consumers">
-            <a class="item-name" href="{{ consumer._links.self.href }}">{{consumer.name }}</a>
+            <a class="item-name" [routerLink]="['/simulations/' + consumer.id]">{{consumer.name }}</a>
             <div class="item-author">
                 <span>{{ consumer._embedded.author.name }}</span>
             </div>
@@ -32,7 +32,7 @@
     <p class="group-header" *ngIf="simulation._embedded.presentations">Presentations</p>
     <div class="items-container" *ngIf="simulation._embedded.presentations">
         <ng-container *ngFor="let presentation of simulation._embedded.presentations">
-            <a class="item-name" href="{{ presentation._links.self.href }}">{{presentation.name }}</a>
+            <a class="item-name" [routerLink]="['/presentations/' + presentation.id]">{{presentation.name }}</a>
             <div class="item-author">
                 <span>{{ presentation._embedded.author.name }}</span>
             </div>
