file drop form on in simulations page

--- a/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/navmenu/navmenu.component.html
@@ -27,17 +27,9 @@
                         <span class='glyphicon glyphicon-cog'></span> Simulations
                     </a>
                 </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/custom_simulation']">
-                        <span class='glyphicon glyphicon-upload'></span> Craft Your Sim
-                    </a>
-                </li>
-                <!--<li>
-                    <br />
-                </li>-->
                 <!--<li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
+                    <a [routerLink]="['/upload']">
+                        <span class='glyphicon glyphicon-upload'></span> Craft Your Sim
                     </a>
                 </li>-->
             </ul>
