parsing json for new simulation on client showing details before upload

--- a/OpenSim.WebServer.App/ClientApp/app/components/new-simulation/new-simulation.component.css
+++ b/OpenSim.WebServer.App/ClientApp/app/components/new-simulation/new-simulation.component.css
@@ -2,6 +2,14 @@
     margin-top: 1em;
 }
 
+#details {
+    margin-top: 1em;
+}
+
+.referenced-item {
+    list-style: none;
+}
+
 .btn-success {
     margin-top: 1em;
 }
