--- a/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/simulation/simulation.component.html
@@ -5,37 +5,37 @@
 
     <p>
         <span>By </span>
-        <a [routerLink]="['/users/' + simulation._embedded.author.id]">{{ simulation._embedded.author.name }}.</a>
-        <span>{{ simulation._embedded.author.description }} </span>
+        <a [routerLink]="['/users/' + simulation.author.id]">{{ simulation.author.name }}.</a>
+        <span>{{ simulation.author.description }} </span>
     </p>
     
-    <p class="group-header" *ngIf="simulation._embedded.references">Referenced By</p>
-    <div class="items-container" *ngIf="simulation._embedded.references">
-        <ng-container *ngFor="let reference of simulation._embedded.references">
+    <p class="group-header" *ngIf="simulation.references">Referenced By</p>
+    <div class="items-container" *ngIf="simulation.references">
+        <ng-container *ngFor="let reference of simulation.references">
             <a class="item-name" [routerLink]="['/simulations/' + reference.id]">{{reference.name }}</a>
             <div class="item-author">
-                <span>{{ reference._embedded.author.name }}</span>
+                <span>{{ reference.author.name }}</span>
             </div>
         </ng-container>
     </div>
 
-    <p class="group-header" *ngIf="simulation._embedded.consumers">Consumed by</p>
-    <div class="items-container" *ngIf="simulation._embedded.consumers">
-        <ng-container *ngFor="let consumer of simulation._embedded.consumers">
+    <p class="group-header" *ngIf="simulation.consumers">Consumed by</p>
+    <div class="items-container" *ngIf="simulation.consumers">
+        <ng-container *ngFor="let consumer of simulation.consumers">
             <a class="item-name" [routerLink]="['/simulations/' + consumer.id]">{{consumer.name }}</a>
-            <div class="item-author">
-                <span>{{ consumer._embedded.author.name }}</span>
-            </div>
+            <!--<div class="item-author">
+                <span>{{ consumer.author.name }}</span>
+            </div>-->
         </ng-container>
     </div>
 
-    <p class="group-header" *ngIf="simulation._embedded.presentations">Presentations</p>
-    <div class="items-container" *ngIf="simulation._embedded.presentations">
-        <ng-container *ngFor="let presentation of simulation._embedded.presentations">
+    <p class="group-header" *ngIf="simulation.presentations">Presentations</p>
+    <div class="items-container" *ngIf="simulation.presentations">
+        <ng-container *ngFor="let presentation of simulation.presentations">
             <a class="item-name" [routerLink]="['/presentations/' + presentation.id]">{{presentation.name }}</a>
-            <div class="item-author">
-                <span>{{ presentation._embedded.author.name }}</span>
-            </div>
+            <!--<div class="item-author">
+                <span>{{ presentation.author.name }}</span>
+            </div>-->
         </ng-container>
     </div>
 </div>
