--- a/OpenSim.WebServer.App/ClientApp/app/components/new-server/new-server.component.css
+++ b/OpenSim.WebServer.App/ClientApp/app/components/new-server/new-server.component.css
@@ -19,7 +19,20 @@
     margin: 0 1em;
 }
 
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
 .simulations {
+    margin: .5em;
+}
+
+.presentations {
     margin: .5em;
 }
 
