final version of dynamically loading releations of simulation to include into new server configuration

--- a/OpenSim.WebServer.App/ClientApp/app/components/new-server/new-server.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/new-server/new-server.component.html
@@ -18,8 +18,8 @@
 
     <div class="simulations">
         <div class="form-group" *ngFor="let simulation of components.simulations">
-            <input type="checkbox"
-                   [(ngModel)]="simulation.isSelected" name="isSelected">{{ simulation.name }}
+            <input type="checkbox" name="isSelected"
+                   [checked]="simulation.isSelected" (change)="simulation.isSelected = !simulation.isSelected">{{ simulation.name }}
         </div>
     </div>
 
