1. exception fix for new server creation 2. self-qurying resource properties

--- a/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.html
@@ -10,7 +10,7 @@
                         </div>
                         <a class="column-name" [routerLink]="['/servers/' + server.id]">{{ server.name }}</a>
                         <div class="column-author">
-                            <span>{{ server.author.name }}</span>
+                            <span>{{ server.author?.name }}</span>
                         </div>
                     </div>
                 
