debugging empty resource collection

--- a/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/servers/servers.component.html
@@ -22,6 +22,6 @@
         </div>
     </div>
     
-    <new-server-form id="new-server-form" (serverCreated)="onServerCreated($event)"></new-server-form>
+    <!--<new-server-form id="new-server-form" (serverCreated)="onServerCreated($event)"></new-server-form>-->
 </div>
 
