it's possible to query relation with it's embedded relations via query builder

--- a/OpenSim.WebServer.App/ClientApp/app/components/new-server/new-server.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/new-server/new-server.component.html
@@ -19,7 +19,8 @@
     <div class="simulations">
         <div class="form-group" *ngFor="let simulation of components.simulations">
             <input type="checkbox" name="isSelected"
-                   [checked]="simulation.isSelected" (change)="simulation.isSelected = !simulation.isSelected">{{ simulation.name }}
+                   [checked]="simulation.isSelected" (change)="simulation.isSelected = !simulation.isSelected">
+            {{ simulation.name }} by {{ simulation.author?.name }}
         </div>
     </div>
 
@@ -28,7 +29,8 @@
     <div class="presentations">
         <div class="form-group" *ngFor="let presentation of components.presentations">
             <input type="checkbox"
-                   [(ngModel)]="presentation.isSelected" name="isSelected">{{ presentation.name }}
+                   [(ngModel)]="presentation.isSelected" name="isSelected">
+            {{ presentation.name }} by {{ presentation.author?.name }}
         </div>
     </div>
 
