identity with  in-memory db works

--- a/OpenSim.WebServer.App/ClientApp/app/components/presentation/presentation.component.html
+++ b/OpenSim.WebServer.App/ClientApp/app/components/presentation/presentation.component.html
@@ -5,7 +5,7 @@
 
     <p>
         <span>By </span>
-        <a [routerLink]="['/users/' + presentation._embedded.author.id]">{{ presentation._embedded.author.name }}.</a>
+        <a [routerLink]="['/users/' + presentation.author.id]">{{ presentation._embedded.author.name }}.</a>
         <span>{{ presentation.author.description }} </span>
     </p>
 
