abandoning web pack - ng --prod --aot is good enough

--- a/Portal/ClientApp/src/app/components/new-simulation/new-simulation.component.html
+++ b/Portal/ClientApp/src/app/components/new-simulation/new-simulation.component.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <file-drop headertext="Drop archieve with you simulation here" 
+        <file-drop headertext="Drop archive with you simulation here" 
                    (onFileDrop)="dropped($event)" 
                    (onFileOver)="fileOver($event)" 
                    (onFileLeave)="fileLeave($event)">
