--- a/Portal/ClientApp/src/app/components/auth/auth.component.html
+++ b/Portal/ClientApp/src/app/components/auth/auth.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="text-center pt-2">
-        <button class="btn btn-primary" [disabled]="authForm.invalid"
+        <button type="submit" class="btn btn-primary" [disabled]="authForm.invalid"
                 (click)="login()">Login</button>
     </div>
 </form>
