--- a/Portal/ClientApp/src/app/components/app/app.component.html
+++ b/Portal/ClientApp/src/app/components/app/app.component.html
@@ -1,14 +1,16 @@
 <div class='container-fluid'>
     <div class='row'>
-        <div class='col-sm-3'>
+        <div class='col-sm-12'>
             <nav-menu></nav-menu>
         </div>
-        <div class='col-sm-9 body-content'>
-            <div class="bg-danger text-white text-center p-2 m-2">
-                <h6 *ngFor="let error of errors">{{error}}</h6>
-            </div>
+        <div class="row">
+            <div class='col-sm-12 body-content'>
+                <div class="bg-danger text-white text-center p-2 m-2">
+                    <h6 *ngFor="let error of errors">{{error}}</h6>
+                </div>
             
-            <router-outlet></router-outlet>
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
 </div>
