--- a/Portal/ClientApp/src/app/components/navmenu/navmenu.component.css
+++ b/Portal/ClientApp/src/app/components/navmenu/navmenu.component.css
@@ -1,10 +1,6 @@
 /* @import url(../../theme/opensim-theme.css); */
 /* TODO resolve webpack post css issue with some postcss library to enable :root css varables*/
 
-li .glyphicon {
-    margin-right: 10px;
-}
-
 /* Customizing default bootstrap colors*/
 .navbar-custom {
     background-color: #0d0846;
@@ -19,16 +15,16 @@ li.link-active a:focus {
 }
 
 /* Keep the nav menu independent of scrolling and on top of other items */
-.main-nav {
+/*.main-nav {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 1;
-}
+}*/
 
-@media (min-width: 768px) {
-    /* On small screens, convert the nav menu to a vertical sidebar */
+/*@media (min-width: 768px) {
+    // On small screens, convert the nav menu to a vertical sidebar 
     .main-nav {
         height: 100%;
         width: calc(25% - 20px);
@@ -57,11 +53,11 @@ li.link-active a:focus {
         padding: 10px 16px;
     }
     .navbar a {
-        /* If a menu item's text is too long, truncate it */
+        // If a menu item's text is too long, truncate it
         width: 100%;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         color: #b4b4ca;
     }
-}
+}*/
