bootstrap 4 for navbar and severs list

--- a/Portal/ClientApp/src/app/components/app/app.component.html
+++ b/Portal/ClientApp/src/app/components/app/app.component.html
@@ -1,16 +1,16 @@
-<div class='container-fluid'>
-    <div class='row'>
-        <div class='col-sm-12'>
-            <nav-menu></nav-menu>
-        </div>
-        <div class="row">
-            <div class='col-sm-12 body-content'>
-                <div class="bg-danger text-white text-center p-2 m-2">
-                    <h6 *ngFor="let error of errors">{{error}}</h6>
-                </div>
-            
-                <router-outlet></router-outlet>
+<div class="row">
+    <div class="col no-gutters">
+        <nav-menu></nav-menu>
+    </div>
+</div>
+<div class="container-fluid body-content">
+    <div class="row">
+        <div class="col">
+            <div *ngIf="errors" class="bg-danger text-white text-center p-2 m-2">
+                <h6 *ngFor="let error of errors">{{error}}</h6>
             </div>
+
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
