--- a/Portal/ClientApp/src/app/components/navmenu/navmenu.component.html
+++ b/Portal/ClientApp/src/app/components/navmenu/navmenu.component.html
@@ -1,20 +1,25 @@
-<div class='navbar-custom'>
-    <nav class='navbar navbar-expand navbar-light'>
-        <a class='navbar-brand' [routerLink]="['/home']">Open Sim</a>
-        <div class='navbar-collapse collapse'>
-            <ul class='navbar-nav'>
-                <li class='nav-item' [routerLinkActive]="['link-active']">
-                    <a class='nav-link' [routerLink]="['/servers']">Servers</a>
-                </li>
-                <li class='nav-item' [routerLinkActive]="['link-active']">
-                    <a class='nav-link' [routerLink]="['/simulations']">Simulations</a>
-                </li>
-                <!--<li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/upload']">
-                        <span class='glyphicon glyphicon-upload'></span> Craft Your Sim
-                    </a>
-                </li>-->
-            </ul>
-        </div>
-    </nav>
-</div>
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+    <a class="nav-link" [routerLink]="['/home']">Open Sim</a>
+    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsibleNavbar">
+        <!--<ul class="navbar-nav expanded">
+            <li class="nav-item" [routerLinkActive]="['link-active']">
+                <a class="nav-link" [routerLink]="['/servers']">Servers</a>
+            </li>
+            <li class="nav-item" [routerLinkActive]="['link-active']">
+                <a class="nav-link" [routerLink]="['/simulations']">Simulations</a>
+            </li>
+        </ul>-->
+
+        <ul class="navbar-nav collapsed">
+            <li class="nav-item ml-3 ml-lg-0" data-toggle="collapse" data-target=".navbar-collapse.show" [routerLinkActive]="['link-active']">
+                <a class="nav-link" [routerLink]="['/servers']">Servers</a>
+            </li>
+            <li class="nav-item ml-3 ml-lg-0" data-toggle="collapse" data-target=".navbar-collapse.show" [routerLinkActive]="['link-active']">
+                <a class="nav-link" [routerLink]="['/simulations']">Simulations</a>
+            </li>
+        </ul>
+    </div>
+</nav>
