--- a/Portal/ClientApp/src/app/components/simulations/simulations.component.css
+++ b/Portal/ClientApp/src/app/components/simulations/simulations.component.css
@@ -15,36 +15,24 @@
     margin-top: 1em;
 }
 
-.item {
-    width: 95%;
-    height: 95%;
-    display: block;
-    object-fit: cover;
+.card {
     border-radius: 4px;
-    overflow: hidden;
-    padding: 5%;
     background-color: rgba(81, 143, 183, 0.69);
-}
-
-/* why 546? */
-@media only screen and (max-width: 546px) {
-    .item {
-        width: 100%;
-    }
+    margin: .3rem;
+    padding: 1rem;
 }
 
 .presentations {
-    margin: .5em 0;
+    margin: .2rem 0 .3rem 0;
 }
 
 .presentations expandable-list-item {
     background-color: rgba(230, 189, 53, 0.70);
     border-radius: 4px;
-    margin-bottom: 1em;
 }
 
 .negative-margin {
-    margin-top: -24px;
+    margin-top: -1.8rem;
 }
 
 .presentation-item {
